--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-sty
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,700;1,900&display=swap" rel="stylesheet">
+    <title>Document</title>
+</head>
+<body>
+    <div class="heading-section">
+
+        <img src="">
+
+        <header class="header">
+            <div class="heading">
+                <h1>sunnyside</h1>
+            </div>
+            
+            <nav class="nav-bar">
+                <ul>
+                    <li><a class="nav-link" href="#About">About</a></li>
+                    <li><a class="nav-link" href="#Services">Services</a></li>
+                    <li><a class="nav-link" href="#Projects">Projects</a></li>
+                    <li><a class="nav-link" href="#Contact">Contact</a></li>
+                </ul>
+            </nav>
+
+        </header>
+
+    </div>
+</body>
+</html>
