--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,wght@0,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:ital,wght@0,700;1,900&display=swap"
+        rel="stylesheet">
     <title>Document</title>
 </head>
+
 <body>
     <div class="heading-section">
 
-        <img src="">
-
-        <header class="header">
+        <header id="About" class="header">
             <div class="heading">
                 <h1>sunnyside</h1>
             </div>
-            
+
             <nav class="nav-bar">
                 <ul>
                     <li><a class="nav-link" href="#About">About</a></li>
@@ -29,7 +30,119 @@
             </nav>
 
         </header>
-
     </div>
+
+    <section id="Services" class="Services-container">
+        <div class="Services">
+            <div class="Service Transform-text">
+                <h1 class="Transform headings">Transform your Transform</h1>
+                <p class="Transform-paragraphs">We are a full-service creative agency specializing in helping Transforms
+                    grow fast. Engage your clients through compelling visuals that do most of the marketing for you.
+                </p>
+                <button type="button" class="Transform buttons">
+                    Learn More
+                </button>
+            </div>
+
+            <div class="Service Transform-Image">
+                <img src="images\desktop\image-transform.jpg" width="20%">
+            </div>
+
+            <div class="Service Stand-out-Image">
+                <img src="images\desktop\image-stand-out.jpg" width="20%">
+            </div>
+
+
+            <div class="Service Stand-out-text">
+                <h1 class="Stand-out headings">Stand out to the right audience</h1>
+                <p class="Stand-out paragraphs">Using a collaborative formula of designers, researchers, photographers,
+                    videographers, and copywriters, we’ll build and extend your brand in digital places</p>
+                <button type="button" class="Stand-out buttons">
+                    Learn More
+                </button>
+            </div>
+
+
+            <div class="Service Graphic-design-text">
+                <h1 class="Graphic-design headings"> Graphic design </h1>
+                <p class="Graphic-design paragraphs">Great design makes you memorable. We deliver artwork that
+                    underscores your brand message and captures potential clients’ attention.</p>
+                <button type="button" class="Graphic-design buttons">
+                    Learn More
+                </button>
+            </div>
+
+            <div class="Service Photography-text">
+                <h1 class="Photography headings">Photography</h1>
+                <p class="Photography paragraphs">Photography Increase your credibility by getting the most stunning,
+                    high-quality photos that improve your business image.</p>
+                <button type="button" class="Photography buttons">
+                    Learn More
+                </button>
+            </div>
+
+
+        </div>
+    </section>
+
+
+    <section id="Projects" class="Projects">
+        <div class=Testimonials-heading>
+            <h1>Client testimonials</h1>
+        </div>
+
+        <div class="Testimonials">
+
+            <div class="Testimonial Emily">
+
+            <div>
+            <img src="images\extra photos\image-emily.jpg">
+            </div>
+
+            <p class="Testimonial paragraph">We put our trust in Sunnyside and they delivered, making sure our needs
+                were met and deadlines were always hit.</p>
+            <p class="Testimonial name"> Emily R.</p>
+            <p class="Testimonial occupation">Marketing Director</p>
+        </div>
+
+        <div class="Testimonial Thomas">
+
+        <div>
+        <img src="images\extra photos\image-thomas.jpg">
+        </div>
+
+        <p class="Testimonial paragraph">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+        <p class="Testimonial name">  Thomas S.</p>
+        <p class="Testimonial occupation">Chief Operating Officer</p>
+    </div>
+
+
+    <div class="Testimonial Jennie">
+
+    <div>
+    <img src="images\extra photos\image-jennie.jpg">
+    </div>
+
+    <p class="Testimonial paragraph">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+    <p class="Testimonial name">  Jennie F.</p>
+    <p class="Testimonial occupation">Business Owner </p>
+</div>
+
+</div>
+</section>
+
+
+<section class="Picutes-section">
+
+    <div>
+        
+    </div>
+
+</section>
+
+
+
+
 </body>
+
 </html>
