--- a/index.html
+++ b/index.html
@@ -134,8 +134,11 @@
 
 <section class="Picutes-section">
 
-    <div>
-        
+    <div class="Pictures">
+        <div class="Picture">
+            <img>
+        </div>
+
     </div>
 
 </section>
