--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
     <div class="Pictures">
         <div class="Picture">
-            <img>
+            <img src="">
         </div>
 
     </div>
