--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
     <div class="heading-section">
 
         <header id="About" class="header">
@@ -30,12 +31,20 @@
             </nav>
 
         </header>
+
+        <svg width="36" height="114" xmlns="http://www.w3.org/2000/svg"><g stroke="#FFF" stroke-width="6" fill="none" fill-rule="evenodd" stroke-linecap="round" stroke-linejoin="round"><path d="M18 3v100M3 95.484l15 15 15-15"/></g></svg>
+
+        <div class="heading2">
+        <h1>WE ARE CREATIVES</h1>
+        </div>
+
     </div>
 
+
     <section id="Services" class="Services-container">
-        <div class="Services">
-            <div class="Service Transform-text">
-                <h1 class="Transform headings">Transform your Transform</h1>
+        <div class="Services1">
+            <div class="Service1 Transform-text">
+                <h1 class="Transform headings">Transform your brand</h1>
                 <p class="Transform-paragraphs">We are a full-service creative agency specializing in helping Transforms
                     grow fast. Engage your clients through compelling visuals that do most of the marketing for you.
                 </p>
@@ -44,9 +53,11 @@
                 </button>
             </div>
 
-            <div class="Service Transform-Image">
-                <img src="images\desktop\image-transform.jpg" width="20%">
+            <div class="Service1 Transform-Image">
+                <img class="Transform-Image" src="images\desktop\image-transform.jpg" width="20%">
             </div>
+
+        </div>
 
             <div class="Service Stand-out-Image">
                 <img src="images\desktop\image-stand-out.jpg" width="20%">
@@ -136,12 +147,55 @@
 
     <div class="Pictures">
         <div class="Picture">
-            <img src="">
+            <img src="images\desktop\image-gallery-milkbottles.jpg">
         </div>
+
+        <div class="Picture">
+            <img src="images\desktop\image-gallery-milkbottles.jpg">
+        </div>
+
+        <div class="Picture">
+            <img src="images\desktop\image-gallery-orange.jpg">
+        </div>
+
+        
+        <div class="Picture">
+            <img src="images\desktop\image-gallery-cone.jpg">
+        </div>
+
+        <div class="Picture">
+            <img src="images\desktop\image-gallery-sugarcubes.jpg">
+        </div>
+
+        
+     </div>
+</section>
+
+
+<footer id="Contact" class="Contact">
+    <div class="footer-content">
+        <div class="footer-heading">
+        <h1>sunnyside</h1>
+    </div>
+
+    <div class="footer-nav">
+        <ul>
+            <li><a href="#About">About</a></li>
+            <li><a href="#Services">Services</a></li>
+            <li><a href="#Projects">Projects</a></li>
+        </ul>
 
     </div>
 
-</section>
+<div class="icons">
+    <img class="icon-facebook" src="images\extra photos\icon-facebook.svg">
+    <img class="icon-instagram" src="images\extra photos\icon-instagram.svg">
+    <img class="icon-twitter"  src="images\extra photos\icon-twitter.svg">
+    <img class="icon-pinterest"  src="images\extra photos\icon-pinterest.svg">
+</div>
+
+</div>
+</footer>
 
 
 
