--- a/index.html
+++ b/index.html
@@ -147,25 +147,17 @@
 <section class="Picutes-section">
 
     <div class="Pictures">
-        <div class="Picture">
-            <img src="images\desktop\image-gallery-milkbottles.jpg">
+        <div class="Picture1 desktop mobile">
         </div>
 
-        <div class="Picture">
-            <img src="images\desktop\image-gallery-milkbottles.jpg">
-        </div>
-
-        <div class="Picture">
-            <img src="images\desktop\image-gallery-orange.jpg">
+        <div class="Picture2 desktop mobile">
         </div>
 
         
-        <div class="Picture">
-            <img src="images\desktop\image-gallery-cone.jpg">
+        <div class="Picture3 desktop mobile">
         </div>
 
-        <div class="Picture">
-            <img src="images\desktop\image-gallery-sugarcubes.jpg">
+        <div class="Picture4 desktop mobile">
         </div>
 
         
